# pentagram

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  cog.toml  dprint.json  flake.nix  main.penta  ruff.toml  rustfmt.toml  task.py
.buildkite/: ci-check.sh  pipeline.yml
.gemini/: settings.json  settings.json.orig
.gemini/commands/: audit-commit.toml  standards.toml
.github/workflows/: main.yaml
boot/analyze/: Cargo.toml
boot/analyze/src/: analyze.rs  analyze_test.rs  lib.rs
boot/db/: Cargo.toml
boot/db/src/: builtin.rs  builtin_test.rs  db.rs  dependency.rs  diagnostic.rs  file.rs  function.rs  generation.rs  generation_test.rs  hash.rs  lib.rs  resolved_function.rs  resolved_statement.rs  resolved_tst.rs  span.rs  statement.rs  term.rs  token.rs  tst.rs  tst_result.rs  value.rs  value_test.rs
boot/engine/: Cargo.toml
boot/engine/src/: analyze.rs  analyze_test.rs  engine.rs  engine_test.rs  execute.rs  execute_test.rs  generation.rs  generation_test.rs  lib.rs  resolve.rs  resolve_test.rs  shred.rs  shred_test.rs  tst.rs  tst_test.rs
boot/eval/: Cargo.toml
boot/eval/src/: eval.rs  eval_test.rs  lib.rs  tests.rs
boot/lex/: Cargo.toml
boot/lex/src/: char_cursor.rs  comment.rs  comment_test.rs  integer.rs  integer_test.rs  lex.rs  lex_test.rs  lib.rs  punctuation.rs  punctuation_test.rs  string.rs  string_test.rs  whitespace.rs  whitespace_test.rs  word.rs  word_test.rs
boot/parse/: Cargo.toml
boot/parse/src/: function.rs  function_test.rs  lib.rs  parse.rs  parse_test.rs  repl.rs  repl_test.rs  shred.rs  statement.rs  statement_test.rs  term.rs  term_test.rs  token_cursor.rs  token_cursor_test.rs  top_level.rs  top_level_test.rs  tst.rs  tst_test.rs
boot/parser/: Cargo.toml
boot/parser/src/: lib.rs  tests.rs
boot/resolve/: Cargo.toml
boot/resolve/src/: lib.rs  resolve.rs  resolve_test.rs
boot/shell/: Cargo.toml
boot/shell/src/: main.rs  shell.rs  shell_test.rs  step.rs
boot/test/: Cargo.toml
boot/test/src/: lib.rs  tst.rs  tst_test.rs
boot/types/: Cargo.toml
boot/types/src/: lib.rs
bootstrap/: .envrc  .flake8  .gitignore  .isort.cfg  LICENSE.md  README.md  check.sh  environment.py  install.sh  machine.py  main.py  pip_freeze.sh  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py  syntax.py  tacit_test.py
bootstrap/guest/: call.py  call_test.py
bootstrap/host/: convert.py  simple_call.py  simple_call_test.py  value.py
bootstrap/interpret/: __init__.py  block.py  block_test.py  interpret.py  interpret_test.py  statement.py  statement_test.py  term.py  term_test.py  test.py
bootstrap/parse/: __init__.py  group.py  group_test.py  line.py  line_test.py  number.py  number_test.py  parse.py  parse_test.py  statement.py  statement_test.py  word.py  word_test.py
bootstrap/pentagram/: environment.py  loop.py  machine.py  main.py  pentagram_test.py  syntax.py  tacit_test.py  test.py
bootstrap/pentagram/guest/: call.py  call_test.py
bootstrap/pentagram/host/: convert.py  simple_call.py  simple_call_test.py  value.py
bootstrap/pentagram/interpret/: __init__.py  block.py  block_test.py  interpret.py  interpret_test.py  statement.py  statement_test.py  term.py  term_test.py  test.py
bootstrap/pentagram/parse/: __init__.py  group.py  group_test.py  line.py  line_test.py  marker.py  number.py  number_test.py  parse.py  parse_test.py  statement.py  statement_test.py  syntax.py  syntax_test.py  word.py  word_test.py
core/: hello.penta  math.test.penta
nix/: nix.nix  python.nix  rust.nix  task.nix  watchman.nix
task/: boot.py  lib.py  watch.py
