[workspace]
members = [
  "boot/analyze",
  "boot/db",
  "boot/engine",
  "boot/eval",
  "boot/parse",
  "boot/resolve",
  "boot/shell",
  "boot/test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
categories = ["compilers"]
edition = "2021"
keywords = ["programming-language", "compiler"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pentagram/pentagram"
description = "The Pentagram programming language"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
boot_analyze = { path = "boot/analyze" }
boot_db = { path = "boot/db" }
boot_engine = { path = "boot/engine" }
boot_eval = { path = "boot/eval" }
boot_parse = { path = "boot/parse" }
boot_resolve = { path = "boot/resolve" }
boot_shell = { path = "boot/shell" }
boot_test = { path = "boot/test" }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
pretty_assertions = "1.4"
rustyline-async = "0.4"
tokio = { version = "1.43", features = ["full"] }
watchman_client = "0.9"
winnow = "0.7"

[workspace.lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
unused = { level = "warn", priority = -1 }

# Allowed by default
absolute-paths-not-starting-with-crate = "warn"
dead-code = "warn"
deprecated-in-future = "warn"
elided-lifetimes-in-paths = "warn"
explicit-outlives-requirements = "warn"
ffi-unwind-calls = "warn"
keyword-idents = "warn"
macro-use-extern-crate = "warn"
meta-variable-misuse = "warn"
missing-abi = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
missing-docs = "allow"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unit-bindings = "warn"
unreachable-pub = "warn"
unsafe-op-in-unsafe-fn = "warn"
unsafe_code = "warn"
unused-crate-dependencies = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Style
style = { level = "warn", priority = -1 }
single_component_path_imports = "allow"

# Restrictions
absolute_paths = "warn"
dbg_macro = "warn"
exit = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
self_named_module_files = "warn"
try_err = "warn"
unwrap_in_result = "warn"
