[package]
name = "boot_db"
version.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
blake3.workspace = true

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }
