[package]
name = "boot_engine"
version.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
blake3 = { workspace = true }
boot_analyze = { workspace = true }
boot_db = { workspace = true }
boot_eval = { workspace = true }
boot_lex = { workspace = true }
boot_parse = { workspace = true }
boot_resolve = { workspace = true }
boot_test = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
