[package]
name = "boot_eval"
version.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
boot_types = { workspace = true }
