[package]
name = "boot_parse"
version.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
boot_db = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
boot_lex = { path = "../lex" }
pretty_assertions = { workspace = true }
