[package]
name = "boot_shell"
version.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
boot_db = { workspace = true }
boot_engine = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rustyline-async = { workspace = true }
tokio = { workspace = true }
watchman_client = { workspace = true }

[lints]
workspace = true
