[package]
name = "boot_test"
version.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
boot_eval = { workspace = true }
boot_parser = { workspace = true }
boot_types = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
watchman_client = { workspace = true }
